Add body margins and position Start Interviewing button in header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senior Product Designer Interview Tool</title>
+    <title>Interview tool</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,11 +12,14 @@
             <div class="header-content">
                 <button id="headerBackBtn" class="btn-back header-back" style="display: none;">Back</button>
                 <div class="header-title" id="headerTitle">
-                    <h1>Senior Product Designer Interview Tool</h1>
+                    <h1>Interview tool</h1>
                     <p class="subtitle">Streamline your hiring process with structured interviews</p>
                 </div>
                 <div class="header-interview-name" id="headerInterviewName" style="display: none;">
                     <h1 id="headerInterviewTitle">Initial Screening</h1>
+                </div>
+                <div class="header-actions" id="headerActions" style="display: none;">
+                    <!-- Start Interviewing button will be inserted here -->
                 </div>
             </div>
         </header>
