Add interviewer/candidate mode selection with dynamic answer structure formatting

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
         <!-- Home View: Interview Type Selection -->
         <div class="home-view" id="homeView">
+            <div class="mode-selection">
+                <h3 class="mode-title">I am:</h3>
+                <div class="mode-options">
+                    <button class="mode-btn active" data-mode="interviewer" id="interviewerMode">
+                        Interviewer
+                    </button>
+                    <button class="mode-btn" data-mode="candidate" id="candidateMode">
+                        Candidate
+                    </button>
+                </div>
+            </div>
             <div class="interview-steps">
                 <div class="step-card" data-type="screening">
                     <div class="step-number">1</div>
